Slightly updated CSS to add extra spacing on poGoCheck section and updated the way in which the dex entry is displayed in attempt to prevent words being randomly squished together without spaces

--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -59,8 +59,12 @@ body {
     border: 3px solid blue;
     height: auto;
     width: auto;
-
 }
+
+#top1a p {
+  margin: 4px;
+}
+
 #top1 {
  
     margin: 5px;
